--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "bottleneck": "^2.19.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "description": ""
 }
